# bigint

./: CMakeLists.txt  README.md  build.sh  run.sh
bigintlib/: CMakeLists.txt  bigint.c  bigint.h
tests/: maintest.c
